CSS -> Module Correction model Projet + Client
Travail devis Valentin

--- a/app/views/claddings/index.html.erb
+++ b/app/views/claddings/index.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<titre><% provide(:title, 'Clients') %></titre>
+<titre><% provide(:title, 'Bardages') %></titre>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,9 +44,6 @@
 <div class="app-bar fixed-top" data-role="appbar">
   <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
   <span class="app-bar-divider"></span>
-  <ul class="app-bar-menu">
-    <li><a href="<%= authenticated_root_path %>">Menu</a></li>
-  </ul>
 
   <div class="app-bar-element place-right">
     <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
