--- a/app/views/order_quote_clients/index.html.erb
+++ b/app/views/order_quote_clients/index.html.erb
@@ -174,47 +174,26 @@
 		<div class="tile-area-controls">
 			<button class="image-button icon-right no-border"><span class="sub-header no-margin text-light"><%= current_user.firstname %> <%= current_user.lastname %></span> <span class="icon mif-user"></span></button>
 		</div>
-		  <hr class="thin bg-grayLighter">
-            <button class="button primary"><a href="<%= authenticated_root_path %>"><span class="mif-plus"></span> Retour</a></button>
-          <hr class="thin bg-grayLighter">
-		<div class="tile-group double">
-      <h3>Information Devis</h3>
-      <div class="tile-container">
-        <br>
-        <div class="input-control select">
-			<%= simple_form_for @order do |f| %>
-    			<%= f.label :orderName, 'Nom du devis : '%>
-    			<%= f.text_field :orderName, class: 'form-control' %></br>
-    			<%= f.label :clientName, 'Nom du client : '%>
-    			<%= f.collection_select :client_id, Client.all, :id, :clientName%></br>
-    			<%= f.label :modulusName, 'Nom du module : '%>
-    			<%= f.collection_select :modulu_id, Modulu.all, :id, :modulusName%></br>
-    		
-    
-    
-    
-  				<%= f.input :orderName %></br>
-  				<%= f.association :client, label_method: :firstNameClient %></br>
-  				<%= f.association :scale_modular_house, label_method: :scaleName %></br>
-  				<%= f.button :submit %>
-			<% end %>
-        </div>
-       
-      </div>
-    </div>
+
+   <div class="cell auto-size padding20 bg-white" id="cell-content">
+    <hr class="thin bg-grayLighter">
+      <button class="button primary"><a href="<%= new_order_quote_client_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+    <hr class="thin bg-grayLighter">
+    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
+    	
 	<div class="tile-group double">
 	    <h3>Ajout d'un client</h3>
 	    <div class="tile-container">
 	    	<br>
 		  <hr class="thin bg-grayLighter">
-            <button class="button primary"><a href="<%= new_client_path %>"><span class="mif-plus"></span> Ajouter un client</a></button>
+            <button class="button primary"><a href="<%= new_client_path %>"><span class="mif-plus"></span>  Ajouter un client</a></button>
           <hr class="thin bg-grayLighter">
 	  	</div>
 	  	 <h3>Vue des modules</h3>
 	    <div class="tile-container">
 	    	<br>
 		  <hr class="thin bg-grayLighter">
-            <button class="button primary"><a href="<%=  new_modulu_path %>"><span class="mif-plus"></span> Ajouter un client</a></button>
+            <button class="button primary"><a href="<%= new_modulu_path %>"><span class="mif-plus"></span> Ajouter un client</a></button>
           <hr class="thin bg-grayLighter">
 	  	</div>
     </div>
@@ -224,10 +203,6 @@
       <div class="tile-container">
         
         <div class="input-control select">
-			<%= simple_form_for @order do |f| %>
-  				<%= f.input :priceTotal %>
-  				<%= f.button :submit %>
-			<% end %>
         </div>
       </div>
     </div>
