--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -4,21 +4,33 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
 		
+        <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+        <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+        <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
+        <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
 		<%= stylesheet_link_tag    'gallery', media: 'all', 'data-turbolinks-track'=> 'reload' %>
 	</head>
-	    <div class="cell auto-size padding20 bg-white" id="cell-content">
-      <h1 class="text-light">Ajouter un fournisseur<span class="mif-users place-right"></span></h1>
-        <hr class="thin bg-grayLighter">
-            <button class="button primary"><a href="<%= authenticated_root_path %>"><span class="mif-plus"></span> Retour</a></button>
-        <hr class="thin bg-grayLighter">
+	
+	<div class="app-bar fixed-top" data-role="appbar">
+      <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Madera</a>
+    
+      <div class="app-bar-element place-right">
+        <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
+      </div>
     </div>
+    
+    <br />
+    <br />
+    <br />
 
-<header>
-<div><img src="http://img4.hostingpics.net/thumbs/mini_370235Maison1.jpg" alt></div>
-<div><img src="http://img4.hostingpics.net/thumbs/mini_119773Maison1.jpg" alt></div>
-<div><img src="http://img4.hostingpics.net/thumbs/mini_547354Maison1.jpg"  alt></div>
-<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/jeremiah-wilson-4.jpg" alt></div>
-<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/jeremiah-wilson-5.jpg" alt></div>
-  <!-- images placed inside block elements to deal with a Firefox rendering bug affecting  scaled flexbox images -->
-</header>
+	<header>
+		<div><img src="http://img4.hostingpics.net/thumbs/mini_370235Maison1.jpg" alt></div>
+		<div><img src="http://img4.hostingpics.net/thumbs/mini_119773Maison1.jpg" alt></div>
+		<div><img src="http://img4.hostingpics.net/thumbs/mini_547354Maison1.jpg"  alt></div>
+		<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/jeremiah-wilson-4.jpg" alt></div>
+		<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/jeremiah-wilson-5.jpg" alt></div>
+	  <!-- images placed inside block elements to deal with a Firefox rendering bug affecting  scaled flexbox images -->
+	</header>
+</html>
