--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -26,10 +26,10 @@
     <br />
 
 	<header>
-		<div><img src="http://img4.hostingpics.net/thumbs/mini_370235Maison1.jpg" alt></div>
-		<div><img src="http://img4.hostingpics.net/thumbs/mini_119773Maison1.jpg" alt></div>
-		<div><img src="http://img4.hostingpics.net/thumbs/mini_547354Maison1.jpg"  alt></div>
-		<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/jeremiah-wilson-4.jpg" alt></div>
+		<div><%= image_tag("Maison1.jpg", :alt => "logo simple madera", height:"200px", width:"200px") %></div>
+		<div><%= image_tag("Maison1.jpg", :alt => "logo simple madera", height:"200px", width:"200px") %></div>
+		<div><%= image_tag("Maison1.jpg", :alt => "logo simple madera", height:"200px", width:"200px") %></div>
+		<div><img src="/images/Maison1.jpg" alt></div>
 		<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/jeremiah-wilson-5.jpg" alt></div>
 	  <!-- images placed inside block elements to deal with a Firefox rendering bug affecting  scaled flexbox images -->
 	</header>
