--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -34,13 +34,13 @@
     </nav>
   </div>
   
-  <br>
+  <br>s
   <br>
   
   <div class="cell auto-size padding20 bg-white" id="cell-content">
-    <h1 class="text-light">Liste Clients<span class="mif-users place-right"></span></h1>
+    <h1 class="text-light">Liste des clients<span class="mif-users place-right"></span></h1>
     <hr class="thin bg-grayLighter">
-      <button class="button primary"><a href="<%= new_client_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+      <button class="button bg-grayLight fg-white"><a href="<%= new_client_path %>"><span class="mif-plus"></span> Ajouter un nouveau client</a></button>
     <hr class="thin bg-grayLighter">
     <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
   
