--- a/app/views/family_components/index.html.erb
+++ b/app/views/family_components/index.html.erb
@@ -39,7 +39,7 @@
 <div class="cell auto-size padding20 bg-white" id="cell-content">
   <h1 class="text-light">Liste des differentes familles<span class="mif-palette place-right"></span></h1>
   <hr class="thin bg-grayLighter">
-    <button class="button primary"><a href="<%= new_family_component_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+    <button class="button bg-grayLight fg-white"><a href="<%= new_family_component_path %>"><span class="mif-plus"></span> Ajouter une nouvelle famille</a></button>
   <hr class="thin bg-grayLighter">
   <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
 
