--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -38,7 +38,7 @@
 <div class="cell auto-size padding20 bg-white" id="cell-content">
   <h1 class="text-light">Liste des fournisseurs<span class="mif-flow-parallel place-right"></span></h1>
   <hr class="thin bg-grayLighter">
-    <button class="button primary"><a href="<%= new_provider_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+    <button class="button bg-grayLight fg-white"><a href="<%= new_provider_path %>"><span class="mif-plus"></span> Ajouter un fournisseur</a></button>
   <hr class="thin bg-grayLighter">
   <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
     <table class="dataTable border bordered no-footer" data-role="datatable" data-auto-width="false" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
