--- a/app/views/scale_modular_houses/index.html.erb
+++ b/app/views/scale_modular_houses/index.html.erb
@@ -40,7 +40,7 @@
     <div class="cell auto-size padding20 bg-white" id="cell-content">
       <h1 class="text-light">Liste des gammes<span class="mif-multitrack-audio place-right"></span></h1>
       <hr class="thin bg-grayLighter">
-        <button class="button primary"><a href="<%= new_scale_modular_house_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+        <button class="button bg-grayLight fg-white"><a href="<%= new_scale_modular_house_path %>"><span class="mif-plus"></span> Ajouter</a></button>
       <hr class="thin bg-grayLighter">
       <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
     
