--- a/app/views/calculation_rules/index.html.erb
+++ b/app/views/calculation_rules/index.html.erb
@@ -9,37 +9,14 @@
     <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
     <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
     <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    
+    <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   
     <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
     <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
   
     <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
-    <style>
-      html, body {
-        height: 100%;
-      }
-      body {
-      }
-      .page-content {
-        padding-top: 3.125rem;
-        min-height: 100%;
-        height: 100%;
-      }
-      .table .input-control.checkbox {
-        line-height: 1;
-        min-height: 0;
-        height: auto;
-      }
-  
-      @media screen and (max-width: 800px){
-        #cell-sidebar {
-          flex-basis: 52px;
-        }
-        #cell-content {
-          flex-basis: calc(100% - 52px);
-        }
-      }
-    </style>
+
   </head>
   
   <div class="app-bar fixed-top" data-role="appbar">
@@ -67,7 +44,7 @@
   <div class="cell auto-size padding20 bg-white" id="cell-content">
     <h1 class="text-light">Liste des règles de calcul<span class="mif-calculator place-right"></span></h1>
     <hr class="thin bg-grayLighter">
-      <button class="button primary"><a href="<%= new_calculation_rule_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+      <button class="button bg-grayLight fg-white"><a href="<%= new_calculation_rule_path %>"><span class="mif-plus"></span> Ajouter une règle</a></button>
     <hr class="thin bg-grayLighter">
     <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
   
