--- a/app/views/cctps/index.html.erb
+++ b/app/views/cctps/index.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <titre><% provide(:title, 'CCTPS') %></titre>
+  <titre><% provide(:title, 'Cctps') %></titre>
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,44 +10,17 @@
     <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
     <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   
+    <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+  
     <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
     <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
   
     <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
-    <style>
-      html, body {
-        height: 100%;
-      }
-      body {
-      }
-      .page-content {
-        padding-top: 3.125rem;
-        min-height: 100%;
-        height: 100%;
-      }
-      .table .input-control.checkbox {
-        line-height: 1;
-        min-height: 0;
-        height: auto;
-      }
-  
-      @media screen and (max-width: 800px){
-        #cell-sidebar {
-          flex-basis: 52px;
-        }
-        #cell-content {
-          flex-basis: calc(100% - 52px);
-        }
-      }
-    </style>
   </head>
   
   <div class="app-bar fixed-top" data-role="appbar">
-    <a class="app-bar-element branding">Madera</a>
+    <a href="<%= authenticated_root_path %>"class="app-bar-element branding">Retour</a>
     <span class="app-bar-divider"></span>
-    <ul class="app-bar-menu">
-      <li><a href="<%= authenticated_root_path %>">Menu</a></li>
-    </ul>
   
     <div class="app-bar-element place-right">
       <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
@@ -67,7 +40,7 @@
   <div class="cell auto-size padding20 bg-white" id="cell-content">
     <h1 class="text-light">Liste cctps<span class="mif-tags place-right"></span></h1>
     <hr class="thin bg-grayLighter">
-      <button class="button primary"><a href="<%= new_cctp_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+      <button class="button bg-grayLight fg-white"><a href="<%= new_cctp_path %>"><span class="mif-plus"></span> Ajouter un cctp</a></button>
     <hr class="thin bg-grayLighter">
     <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
   
