--- a/app/views/claddings/index.html.erb
+++ b/app/views/claddings/index.html.erb
@@ -63,7 +63,7 @@
 <div class="cell auto-size padding20 bg-white" id="cell-content">
   <h1 class="text-light">Liste des bardages<span class="mif-map place-right"></span></h1>
   <hr class="thin bg-grayLighter">
-    <button class="button primary"><a href="<%= new_cladding_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+    <button class="button bg-grayLight fg-white"><a href="<%= new_cladding_path %>"><span class="mif-plus"></span> Ajouter un nouveau bardage</a></button>
   <hr class="thin bg-grayLighter">
   <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
 
