--- a/app/views/modulus/index.html.erb
+++ b/app/views/modulus/index.html.erb
@@ -40,7 +40,7 @@
   <div class="cell auto-size padding20 bg-white" id="cell-content">
     <h1 class="text-light">Liste des modules<span class="mif-stack place-right"></span></h1>
     <hr class="thin bg-grayLighter">
-      <button class="button primary"><a href="<%= new_modulu_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+      <button class="button bg-grayLight fg-white"><a href="<%= new_modulu_path %>"><span class="mif-plus"></span> Créer un nouveau module</a></button>
     <hr class="thin bg-grayLighter">
     <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
   
@@ -67,7 +67,7 @@
               <td><%= m.modulusNature %></td>
               <td><%= m.insulating.insulatingName %></td>
               <td><%= m.cladding_id %></td>
-              <td><%= m.unite_use.unitUseName %></td>
+              <td><%= m.unite_use_id %></td>
               <td><%= m.priceTotal %></td>
               <td><%= m.moduluStock %></td>
               <td>
