--- a/app/views/order_quote_clients/index.html.erb
+++ b/app/views/order_quote_clients/index.html.erb
@@ -1,216 +1,75 @@
 <!DOCTYPE html>
-	<titre><% provide(:title, 'Devis') %></titre>
-	<head lang="en">
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-		<%= stylesheet_link_tag    'metro', media: 'all' %>
-		<%= stylesheet_link_tag    'metro-icons', media: 'all' %>
-		<%= stylesheet_link_tag    'metro-responsive', media: 'all' %>
-
-		<%= javascript_include_tag 'jquery-2.1.3.min' %>
-		<%= javascript_include_tag 'metro' %>
-
-		<script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
-
-		<style>
-			.tile-area-controls {
-				position: fixed;
-				right: 40px;
-				top: 40px;
-			}
-
-			.tile-group {
-				left: 100px;
-			}
-
-			.tile, .tile-small, .tile-sqaure, .tile-wide, .tile-large, .tile-big, .tile-super {
-				opacity: 0;
-				-webkit-transform: scale(.8);
-				transform: scale(.8);
-			}
-
-			#charmSettings .button {
-				margin: 5px;
-			}
-
-			.schemeButtons {
-				/*width: 300px;*/
-			}
-
-			@media screen and (max-width: 640px) {
-				.tile-area {
-					overflow-y: scroll;
-				}
-				.tile-area-controls {
-					display: none;
-				}
-			}
-
-			@media screen and (max-width: 320px) {
-				.tile-area {
-					overflow-y: scroll;
-				}
-
-				.tile-area-controls {
-					display: none;
-				}
-
-			}
-		</style>
-		<script>
-				(function($) {
-						$.StartScreen = function(){
-								var plugin = this;
-								var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
-
-								plugin.init = function(){
-										setTilesAreaSize();
-										if (width > 640) addMouseWheel();
-								};
-
-								var setTilesAreaSize = function(){
-										var groups = $(".tile-group");
-										var tileAreaWidth = 80;
-										$.each(groups, function(i, t){
-												if (width <= 640) {
-														tileAreaWidth = width;
-												} else {
-														tileAreaWidth += $(t).outerWidth() + 80;
-												}
-										});
-										$(".tile-area").css({
-												width: tileAreaWidth
-										});
-								};
-
-								var addMouseWheel = function (){
-										$("body").mousewheel(function(event, delta, deltaX, deltaY){
-												var page = $(document);
-												var scroll_value = delta * 50;
-												page.scrollLeft(page.scrollLeft() - scroll_value);
-												return false;
-										});
-								};
-
-								plugin.init();
-						}
-				})(jQuery);
-
-				$(function(){
-						$.StartScreen();
-
-						var tiles = $(".tile, .tile-small, .tile-sqaure, .tile-wide, .tile-large, .tile-big, .tile-super");
-
-						$.each(tiles, function(){
-								var tile = $(this);
-								setTimeout(function(){
-										tile.css({
-												opacity: 1,
-												"-webkit-transform": "scale(1)",
-												"transform": "scale(1)",
-												"-webkit-transition": ".3s",
-												"transition": ".3s"
-										});
-								}, Math.floor(Math.random()*500));
-						});
-
-						$(".tile-group").animate({
-								left: 0
-						});
-				});
-
-				function setSearchPlace(el){
-						var a = $(el);
-						var text = a.text();
-						var toggle = a.parents('label').children('.dropdown-toggle');
-
-						toggle.text(text);
-				}
-
-				$(function(){
-						var current_tile_area_scheme = localStorage.getItem('tile-area-scheme') || "tile-area-scheme-dark";
-						$(".tile-area").removeClass (function (index, css) {
-								return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
-						}).addClass(current_tile_area_scheme);
-
-						$(".schemeButtons .button").hover(
-								function(){
-										var b = $(this);
-										var scheme = "tile-area-scheme-" +  b.data('scheme');
-										$(".tile-area").removeClass (function (index, css) {
-												return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
-										}).addClass(scheme);
-								},
-								function(){
-										$(".tile-area").removeClass (function (index, css) {
-												return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
-										}).addClass(current_tile_area_scheme);
-								}
-						);
-
-						$(".schemeButtons .button").on("click", function(){
-								var b = $(this);
-								var scheme = "tile-area-scheme-" +  b.data('scheme');
-
-								$(".tile-area").removeClass (function (index, css) {
-										return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
-								}).addClass(scheme);
-
-								current_tile_area_scheme = scheme;
-								localStorage.setItem('tile-area-scheme', scheme);
-
-								showSettings();
-						});
-				});
-
-		</script>
-
-	</head>
-
-	<div class="tile-area tile-area-scheme-dark fg-white" style="height: 100%; max-height: 100% !important;">
-		<h1 class="tile-area-title">DEVIS</h1>
-		<div class="tile-area-controls">
-			<button class="image-button icon-right no-border"><span class="sub-header no-margin text-light"><%= current_user.firstname %> <%= current_user.lastname %></span> <span class="icon mif-user"></span></button>
-		</div>
-
-   <div class="cell auto-size padding20 bg-white" id="cell-content">
+<html>
+  <titre><% provide(:title, 'Devis') %></titre>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  
+    <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    
+    <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+  
+    <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
+  
+    <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
+    
+  </head>
+  
+  <div class="app-bar fixed-top" data-role="appbar">
+    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
+  
+    <div class="app-bar-element place-right">
+      <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
+    </div>
+  
+    <div class="app-bar-pullbutton automatic" style="display: none;"></div>
+    <div class="clearfix" style="width: 0;"></div>
+  
+    <nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;">
+        <ul class="app-bar-pullmenubar hidden app-bar-menu"></ul>
+    </nav>
+  </div>
+  
+  <br>
+  <br>
+  
+  <div class="cell auto-size padding20 bg-white" id="cell-content">
+    <h1 class="text-light">Liste des devis<span class="mif-users place-right"></span></h1>
     <hr class="thin bg-grayLighter">
-      <button class="button primary"><a href="<%= new_order_quote_client_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+      <button class="button bg-grayLight fg-white"><a href="<%= new_order_quote_client_path %>"><span class="mif-plus"></span> Créer un nouveau devis</a></button>
     <hr class="thin bg-grayLighter">
     <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
-    	
-	<div class="tile-group double">
-	    <h3>Ajout d'un client</h3>
-	    <div class="tile-container">
-	    	<br>
-		  <hr class="thin bg-grayLighter">
-            <button class="button primary"><a href="<%= new_client_path %>"><span class="mif-plus"></span>  Ajouter un client</a></button>
-          <hr class="thin bg-grayLighter">
-	  	</div>
-	  	 <h3>Vue des modules</h3>
-	    <div class="tile-container">
-	    	<br>
-		  <hr class="thin bg-grayLighter">
-            <button class="button primary"><a href="<%= new_modulu_path %>"><span class="mif-plus"></span> Ajouter un client</a></button>
-          <hr class="thin bg-grayLighter">
-	  	</div>
-    </div>
-    
-    <div class="tile-group double">
-      <h3>Information Maison</h3>
-      <div class="tile-container">
-        
-        <div class="input-control select">
-        </div>
+  
+      <table class="dataTable border bordered no-footer" data-role="datatable" data-auto-width="false" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
+        <thead>
+          <tr role="row">
+            <td class="sortable-column sort-asc sorting" style="width: 100px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="ID: activate to sort column ascending">#</td>
+            <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Machine name: activate to sort column ascending">Nom du devis</td>
+            <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Address: activate to sort column ascending">Etat du devis</td>
+                        <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Address: activate to sort column ascending">Montant</td>
+            <td class="sortable-column sorting" style="width: 20px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">Action</td>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+            <tr>
+              <td><%= order.id %></td>
+              <td><%= order.orderName %></td>
+              <td><%= order.stateOrder %></td>
+              <td><%= order.priceTotal %></td>
+              <td>
+                <a href="<%= order_quote_client_path(order.id) %>" class="fa fa-eye fa-2x"></a>
+                <a href="<%= edit_order_quote_client_path(order.id) %>" class="fa fa-pencil fa-2x"></a>
+                <a href="<%= order_quote_client_path(order.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
+              </td>
+            </tr>
+          <% end %>
+          </tbody>
+      </table>
       </div>
     </div>
-    
-	</div>
-	
-    </thead>
-    <tbody>
- 
-
-</html>
+  </html>
