--- a/app/views/project_modular_houses/index.html.erb
+++ b/app/views/project_modular_houses/index.html.erb
@@ -8,37 +8,13 @@
   <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+  
+  <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
 
   <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
   <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
 
   <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
-  <style>
-    html, body {
-      height: 100%;
-    }
-    body {
-    }
-    .page-content {
-      padding-top: 3.125rem;
-      min-height: 100%;
-      height: 100%;
-    }
-    .table .input-control.checkbox {
-      line-height: 1;
-      min-height: 0;
-      height: auto;
-    }
-
-    @media screen and (max-width: 800px){
-      #cell-sidebar {
-        flex-basis: 52px;
-      }
-      #cell-content {
-        flex-basis: calc(100% - 52px);
-      }
-    }
-  </style>
 </head>
 
 <div class="app-bar fixed-top" data-role="appbar">
@@ -63,7 +39,7 @@
 <div class="cell auto-size padding20 bg-white" id="cell-content">
   <h1 class="text-light">Liste des projets<span class="mif-users place-right"></span></h1>
   <hr class="thin bg-grayLighter">
-    <button class="button primary"><a href="<%= new_project_modular_house_path %>"><span class="mif-plus"></span> Ajouter</a></button>
+    <button class="button bg-grayLight fg-white"><a href="<%= new_project_modular_house_path %>"><span class="mif-plus"></span> Créer un nouveau projet</a></button>
   <hr class="thin bg-grayLighter">
   <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
 
