--- a/app/views/order_quote_clients/_form_modulus.html.erb
+++ b/app/views/order_quote_clients/_form_modulus.html.erb
@@ -4,7 +4,7 @@
         <%= q.hidden_field :_destroy %>
         <div class="field">
             <%= q.label :modulusName, "Module <span class='numero-modulu'>#{js ? "valeur_cherchee2" : (q.options[:child_index] + 1)}</span>".html_safe %>
-            <%= q.text_field :modulusName %>
+            <%= q.collection_select :modulusName, Modulu.all, :id, :modulusName%></br></br>
             <%= q.label :modulusNature, "Module nature " %>
             <%= q.text_field :modulusNature %>
             <%= q.label :priceTotal, "Prix" %>
