--- a/app/views/claddings/index.html.erb
+++ b/app/views/claddings/index.html.erb
@@ -1,98 +1,77 @@
 <!DOCTYPE html>
-<titre><% provide(:title, 'Bardages') %></titre>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
-  <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
-  <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
-
-  <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
-  <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
-
-  <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
-  <style>
-    html, body {
-      height: 100%;
-    }
-    body {
-    }
-    .page-content {
-      padding-top: 3.125rem;
-      min-height: 100%;
-      height: 100%;
-    }
-    .table .input-control.checkbox {
-      line-height: 1;
-      min-height: 0;
-      height: auto;
-    }
-
-    @media screen and (max-width: 800px){
-      #cell-sidebar {
-        flex-basis: 52px;
-      }
-      #cell-content {
-        flex-basis: calc(100% - 52px);
-      }
-    }
-  </style>
-</head>
-
-<div class="app-bar fixed-top" data-role="appbar">
-  <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
-  <span class="app-bar-divider"></span>
-
-  <div class="app-bar-element place-right">
-    <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
+<html>
+  <titre><% provide(:title, 'Bardages') %></titre>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  
+    <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    
+    <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+  
+    <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
+  
+    <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
+  </head>
+  
+  <div class="app-bar fixed-top" data-role="appbar">
+    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Menu</a>
+    <span class="app-bar-divider"></span>
+  
+    <div class="app-bar-element place-right">
+      <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
+    </div>
+  
+    <div class="app-bar-pullbutton automatic" style="display: none;"></div>
+    <div class="clearfix" style="width: 0;"></div>
+  
+    <nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;">
+        <ul class="app-bar-pullmenubar hidden app-bar-menu"></ul>
+    </nav>
   </div>
-
-  <div class="app-bar-pullbutton automatic" style="display: none;"></div>
-  <div class="clearfix" style="width: 0;"></div>
-
-  <nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;">
-      <ul class="app-bar-pullmenubar hidden app-bar-menu"></ul>
-  </nav>
-</div>
-
-<br>
-<br>
-
-<div class="cell auto-size padding20 bg-white" id="cell-content">
-  <h1 class="text-light">Liste des bardages<span class="mif-map place-right"></span></h1>
-  <hr class="thin bg-grayLighter">
-    <button class="button bg-grayLight fg-white"><a href="<%= new_cladding_path %>"><span class="mif-plus"></span> Ajouter un nouveau bardage</a></button>
-  <hr class="thin bg-grayLighter">
-  <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
-
- 
-
-    <table class="dataTable border bordered no-footer" data-role="datatable" data-auto-width="false" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
-      <thead>
-        <tr role="row">
-          <td class="sortable-column sort-asc sorting" style="width: 100px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="ID: activate to sort column ascending">#</td>
-          <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Machine name: activate to sort column ascending">Epaisseur</td>
-          <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Address: activate to sort column ascending">Prix</td>
-          <td class="sortable-column sorting" style="width: 20px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">Action</td>
-        </tr>
-      </thead>
-      <tbody>
-        <% @claddings.each do |cladding| %>
-        <tr>
-            <td><%= cladding.id %></td>
-            <td><%= cladding.thicknessCladdings %></td>
-            <td><%= cladding.priceCladdings %></td>
-            <td>
-                <a href="<%= claddings_path(cladding.id) %>" class="fa fa-eye fa-2x"></a>
-                <a href="<%= edit_cladding_path(cladding.id) %>" class="fa fa-pencil fa-2x"></a>
-                <a href="<%= cladding_path(cladding.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
-            </td>
-        </tr>
-        <% end %>
-    </tbody>
-    </table>
+  
+  <br>
+  <br>
+  
+  <div class="cell auto-size padding20 bg-white" id="cell-content">
+    <h1 class="text-light">Liste des bardages<span class="mif-map place-right"></span></h1>
+    <hr class="thin bg-grayLighter">
+      <button class="button bg-grayLight fg-white"><a href="<%= new_cladding_path %>"><span class="mif-plus"></span> Ajouter un nouveau bardage</a></button>
+    <hr class="thin bg-grayLighter">
+    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
+  
+   
+  
+      <table class="dataTable border bordered no-footer" data-role="datatable" data-auto-width="false" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
+        <thead>
+          <tr role="row">
+            <td class="sortable-column sort-asc sorting" style="width: 100px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="ID: activate to sort column ascending">#</td>
+            <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Machine name: activate to sort column ascending">Epaisseur</td>
+            <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Address: activate to sort column ascending">Prix</td>
+            <td class="sortable-column sorting" style="width: 20px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">Action</td>
+          </tr>
+        </thead>
+        <tbody>
+          <% @claddings.each do |cladding| %>
+          <tr>
+              <td><%= cladding.id %></td>
+              <td><%= cladding.thicknessCladdings %></td>
+              <td><%= cladding.priceCladdings %></td>
+              <td>
+                  <a href="<%= claddings_path(cladding.id) %>" class="fa fa-eye fa-2x"></a>
+                  <a href="<%= edit_cladding_path(cladding.id) %>" class="fa fa-pencil fa-2x"></a>
+                  <a href="<%= cladding_path(cladding.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
+              </td>
+          </tr>
+          <% end %>
+      </tbody>
+      </table>
+    </div>
   </div>
-</div>
+</html>
 
