--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -14,17 +14,20 @@
   
     <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
     <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
   
     <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
     
   </head>
   
-  <div class="app-bar fixed-top" data-role="appbar">
-    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
   
+    
+    <div class="app-bar fixed-top" data-role="appbar">
+    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Menu</a>
     <div class="app-bar-element place-right">
       <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
     </div>
+  </div>
   
     <div class="app-bar-pullbutton automatic" style="display: none;"></div>
     <div class="clearfix" style="width: 0;"></div>
