--- a/app/views/project_modular_houses/_form.html.erb
+++ b/app/views/project_modular_houses/_form.html.erb
@@ -16,8 +16,7 @@
     </head>
     
     <div class="app-bar fixed-top" data-role="appbar">
-      <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Madera</a>
-    
+      <a href="<%= project_modular_houses_path %>" class="app-bar-element branding">Retour</a>
       <div class="app-bar-element place-right">
         <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
       </div>
