--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -11,18 +11,15 @@
         <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
         <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
         <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
-        <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
         
         <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
     </head>
     
     <div class="app-bar fixed-top" data-role="appbar">
-      <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Madera</a>
-    
+      <a href="<%= providers_path %>" class="app-bar-element branding">Retour</a>
       <div class="app-bar-element place-right">
         <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
       </div>
-      
     </div>
 
     <%= form_for @provider, :html => {:class => 'align-center'} do |f| %>
