--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -13,12 +13,13 @@
 
   <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
   <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
+  <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
 
   <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
 </head>
 
 <div class="app-bar fixed-top" data-role="appbar">
-  <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
+  <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Menu</a>
 
   <div class="app-bar-element place-right">
     <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
