--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -13,8 +13,7 @@
     <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   
     <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
-    <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
-    <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'metro' %>
   
     <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
     
@@ -23,7 +22,7 @@
   
     
     <div class="app-bar fixed-top" data-role="appbar">
-    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Menu</a>
+    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
     <div class="app-bar-element place-right">
       <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
     </div>
